--- a/config/database.yml
+++ b/config/database.yml
@@ -8,6 +8,7 @@
 default: &default
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#  pool: 1
   timeout: 5000
 
 development:
