--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,17 @@ default: &default
 development:
   <<: *default
 
+# Full database includes data on votes, which we cannot upload
+# to Heroku without having to pay for DB usage.
+full:
+  adapter: postgresql
+  encoding: unicode
+  username: iclickerviewer
+  pool: 5
+  host: localhost
+  database: iclickerviewer_full
+  password: iclickerviewer
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
