--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  term: MyString
-  year: 1
-  institution: MyString
-  instructor: MyString
-  folder_name: MyString
+  name: test_class1
+  term: fall
+  year: 2016
+  institution: test_school
+  instructor: monroe
+  folder_name: test_class1
 
 two:
-  name: MyString
-  term: MyString
-  year: 1
-  institution: MyString
-  instructor: MyString
-  folder_name: MyString
+  name: test_class2
+  term: spring
+  year: 2017
+  institution: test_school
+  instructor: burkhardt
+  folder_name: test_class2
