--- a/test/fixtures/matching_questions.yml
+++ b/test/fixtures/matching_questions.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  question_id: 1
-  matching_question_id: 1
+#
+# These are all foreign keys
+#
 
-two:
-  question_id: 1
-  matching_question_id: 1
+# one:
+#   question_id: 1
+#   matching_question_id: 1
