--- a/test/fixtures/class_periods.yml
+++ b/test/fixtures/class_periods.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  session_code: L1609010905
+  session_code: class_period1
   name: Session 1
   participation: 1
   performance: -1
@@ -11,11 +11,11 @@ one:
   course: one
 
 two:
-  session_code: L1609030905
+  session_code: class_period2
   name: Session 2
   participation: 1
   performance: -1
   min_response: 4
   min_response_string: this field is never used
-  date: 2016-09-03 09:05:00
-  course: one
+  date: 2017-01-03 09:05:00
+  course: two
