many-to-many join table works but I DON'T KNOW WHY
I have no idea why matching_questions suddenly works. I renamed everything to matched_questions instead of matching_questions and changed a bunch of :source and :foreign_key parts and now it works.

--- a/test/fixtures/matching_questions.yml
+++ b/test/fixtures/matching_questions.yml
@@ -4,6 +4,10 @@
 # These are all foreign keys
 #
 
-# one:
-#   question_id: 1
-#   matching_question_id: 1
+one:
+  question: m1
+  matched_question: m2
+
+two:
+  question: m2
+  matched_question: m1
