--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -111,6 +111,9 @@ five:
   question_pair: 1
   class_period: two
 
+#
+# m1,m2,m3 are potential matches
+#
 m1:
   name: Question 99-1
   response_a: 3
@@ -171,3 +174,48 @@ m3:
   question_type: 1
   question_pair:
   class_period: two
+
+#
+# nomatchq1 and nomatchq2 are potential matches that have been marked as not matching
+#
+nomatchq1:
+  name: Nomatch-1
+  response_a: 3
+  response_b: 10
+  response_c: 5
+  response_d: 8
+  response_e: 20
+  correct_a: 0
+  correct_b: 0
+  correct_c: 0
+  correct_d: 0
+  correct_e: 1
+  start: 09:17:34
+  stop: 09:18:54
+  num_seconds: 80
+  question_index: 77
+  is_deleted: N
+  question_type: 1
+  question_pair:
+  class_period: one
+
+nomatchq2:
+  name: Nomatch-2
+  response_a: 3
+  response_b: 10
+  response_c: 5
+  response_d: 8
+  response_e: 20
+  correct_a: 0
+  correct_b: 0
+  correct_c: 0
+  correct_d: 0
+  correct_e: 1
+  start: 09:17:34
+  stop: 09:18:54
+  num_seconds: 80
+  question_index: 77
+  is_deleted: N
+  question_type: 1
+  question_pair:
+  class_period: one
