--- a/test/fixtures/class_periods.yml
+++ b/test/fixtures/class_periods.yml
@@ -19,3 +19,13 @@ two:
   min_response_string: this field is never used
   date: 2017-01-03 09:05:00
   course: two
+
+three:
+  session_code: class_period3
+  name: Session 3
+  participation: 1
+  performance: -1
+  min_response: 4
+  min_response_string: this field is never used
+  date: 2016-09-01 09:05:00
+  course: one
